feature: enable users to view their bids